--- a/sandpit/index.html
+++ b/sandpit/index.html
@@ -7,6 +7,6 @@
 <body>
 		<div id="viz"></div>
 		<script src="http://d3js.org/d3.v3.min.js"></script>
-		<script type="text/javascript" src="script.js"></script>
+		<script type="text/javascript" src="simple_data.js"></script>
 </body>
 </html>
