--- a/sandpit/index.html
+++ b/sandpit/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 		<div id="viz"></div>
+		<script src="underscore.js"></script>
 		<script src="http://d3js.org/d3.v3.min.js"></script>
 		<script type="text/javascript" src="simple_data.js"></script>
 </body>
